# webinput

./: .gitignore  README.md  setup.cfg
docs/source/: conf.py  index.rst
src/slider/: slider.ino
src/webinput/: client.py  slider.py  webinput.py
web/: editor.html  reftracking.html
