[metadata]
# replace with your username:
name = webinput
version = 0.0.1
author = Benjamin Chasnov
author_email = bchasnov@gmail.com
description = Streams serial inputs to a web browser via websockets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bchasnov/webinput
project_urls =
    Bug Tracker = https://github.com/bchasnov/webinput/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
